--- a/index.html
+++ b/index.html
@@ -373,7 +373,7 @@
             </section>
             <section class="text-center imagebg">
                 <div class="background-image-holder">
-                    <img alt="background" src="img/hero-3.jpg" />
+                    <img alt="background" src="img/contact.png" />
                 </div>
                 <div class="container">
                     <div class="row justify-content-center">
