--- a/aboutus.html
+++ b/aboutus.html
@@ -217,40 +217,42 @@
                     <div class="row">
                         <div class="col-md-4">
                             <div class="feature feature-8">
-                                <img alt="Image" src="img/avatar-round-1.png" />
+                                <img alt="Image" src="img/team/1.png" />
                                 <h5>Vera Duncan</h5>
                                 <span>Founder &amp; CEO</span>
                             </div>
                         </div>
                         <div class="col-md-4">
                             <div class="feature feature-8">
-                                <img alt="Image" src="img/avatar-round-3.png" />
+                                <img alt="Image" src="img/team/3.png" />
                                 <h5>Zach Smith</h5>
                                 <span>Co-Founder &amp; CTO</span>
                             </div>
                         </div>
                         <div class="col-md-4">
                             <div class="feature feature-8">
-                                <img alt="Image" src="img/avatar-round-2.png" />
+                                <img alt="Image" src="img/team/5.png" />
                                 <h5>Bernice Lucas</h5>
                                 <span>Chief of Operations</span>
                             </div>
                         </div>
-                        <!-- <div class="col-md-4">
+                        <div class="col-md-2"></div>
+                        <div class="col-md-4">
                             <div class="feature feature-8">
-                                <img alt="Image" src="img/avatar-round-4.png" />
+                                <img alt="Image" src="img/team/2.png" />
                                 <h5>Cameron Nguyen</h5>
                                 <span>Lead Designer</span>
                             </div>
                         </div>
                         <div class="col-md-4">
                             <div class="feature feature-8">
-                                <img alt="Image" src="img/avatar-round-5.png" />
+                                <img alt="Image" src="img/team/4.png" />
                                 <h5>Josie Web</h5>
                                 <span>Head of Development</span>
                             </div>
                         </div>
-                        <div class="col-md-4">
+                        <div class="col-md-2"></div>
+                        <!-- <div class="col-md-4">
                             <div class="feature feature-8">
                                 <img alt="Image" src="img/avatar-round-6.png" />
                                 <h5>Bryce Vaughn</h5>
