--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     </head>
     <body class=" ">
         <a id="start"></a>
-        <div class="nav-container ">
+        <div class="nav-container">
             <div class="bar bar--sm visible-xs">
                 <div class="container">
                     <div class="row">
@@ -114,7 +114,7 @@
                                 </p>
                                 <a class="btn btn--primary type--uppercase" href="index.html">
                                     <span class="btn__text">
-                                        View The Demos
+                                        More
                                     </span>
                                 </a>
                             </div>
@@ -377,7 +377,7 @@
                 </div>
                 <div class="container">
                     <div class="row justify-content-center">
-                        <h2>Join over 20,000 members of our community</h2>
+                        <h2>Join our 20,000+ member community</h2>
                     </div>
                     <form class="row justify-content-center" action="http://mrare.us8.list-manage.com/subscribe/post?u=77142ece814d3cff52058a51f&amp;id=f300c9cce8" data-success="Thanks for signing up.  Please check your inbox for a confirmation email." data-error="Please provide your name and email address and agree to the terms.">
                         <div class="col-lg-3 col-md-4">
@@ -415,7 +415,7 @@
                                 </li>
                                 <li class="list-inline-item">
                                     <a href="#">
-                                        <span class="type--fine-print">help@stack.io</span>
+                                        <span class="type--fine-print">versoafrica@gmail.com</span>
                                     </a>
                                 </li>
                             </ul>
