--- a/magazine.html
+++ b/magazine.html
@@ -22,78 +22,80 @@
     <body class="">
         <a id="start"></a>
         <div class="nav-container ">
-            <nav class="bar bar-toggle " data-fixed-at="200">
+            <div class="bar bar--sm visible-xs">
                 <div class="container">
-                    <div class="row align-items-center">
-                        <div class="col">
+                    <div class="row">
+                        <div class="col-3 col-md-2">
+                            <a href="index.html">
+                                <img class="logo logo-dark" alt="logo" src="img/logo-dark.png" />
+                                <img class="logo logo-light" alt="logo" src="img/logo-light.png" />
+                            </a>
+                        </div>
+                        <div class="col-9 col-md-10 text-right">
+                            <a href="#" class="hamburger-toggle" data-toggle-class="#menu1;hidden-xs">
+                                <i class="icon icon--sm stack-interface stack-menu"></i>
+                            </a>
+                        </div>
+                    </div>
+                    <!--end of row-->
+                </div>
+                <!--end of container-->
+            </div>
+            <!--end bar-->
+            <nav id="menu1" class="bar bar--sm bar-1 hidden-xs ">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-lg-1 col-md-2 hidden-xs">
                             <div class="bar__module">
                                 <a href="index.html">
                                     <img class="logo logo-dark" alt="logo" src="img/logo/logo_dark.png" />
-                                    <img class="logo logo-light" alt="logo" src="img/disable.html" />
+                                    <img class="logo logo-light" alt="logo" src="img/logo/logo.png" />
                                 </a>
                             </div>
                             <!--end module-->
                         </div>
-                        <div class="col d-flex justify-content-end">
+                        <div class="col-lg-11 col-md-12 text-right text-left-xs text-left-sm">
+                                <div class="bar__module">
+                                        <ul class="menu-horizontal text-left">
+                                            <li>
+                                                <a href="index.html"><span>Home</span></a>
+                                            </li>
+                                            <li>
+                                                <a href="aboutus.html"><span>About Us</span></a>
+                                            </li>
+                                            <li>
+                                                <a href="magazine.html"><span>Magazine</span></a>
+                                            </li>
+                                            <li>
+                                                <a href="blog.html"><span>Blog</span></a>
+                                            </li>
+                                            <li>
+                                                <a href="contactus.html"><span>Contact Us</span></a>
+                                            </li>
+                                            
+                                        </ul>
+                                </div>
+                            <!--end module-->
                             <div class="bar__module">
-                                <a class="menu-toggle pull-right" href="#" data-notification-link="sidebar-menu">
-                                    <i class="stack-interface stack-menu"></i>
+                                <a class="btn btn--sm type--uppercase" href="contactus.html">
+                                    <span class="btn__text">
+                                        Hello!
+                                    </span>
                                 </a>
+                                <!-- <a class="btn btn--sm btn--primary type--uppercase" href="https://themeforest.net/item/stack-multipurpose-html-with-page-builder/19337626?ref=medium_rare">
+                                    <span class="btn__text">
+                                        Buy Now
+                                    </span>
+                                </a> -->
                             </div>
                             <!--end module-->
                         </div>
-                        <!--end columns-->
                     </div>
                     <!--end of row-->
                 </div>
                 <!--end of container-->
             </nav>
-            <div class="notification pos-right pos-top side-menu bg--white" data-notification-link="sidebar-menu" data-animation="from-right">
-                <div class="side-menu__module pos-vertical-center text-right">
-                    <ul class="menu-vertical">
-                        <li>
-                            <a class="inner-link" href="index.html">Home</a>
-                        </li>
-                        <li>
-                            <a class="inner-link" href="aboutus.html">About Us</a>
-                        </li>
-                        <li>
-                            <a class="inner-link" href="magazine.html">Magazine</a>
-                        </li>
-                        <li>
-                            <a class="inner-link" href="blog.html">Blog</a>
-                        </li>
-                        <li>
-                            <a class="inner-link" href="contactus.html">Contact Us</a>
-                        </li>
-                    </ul>
-                </div>
-                <!--end module-->
-                <div class="side-menu__module pos-bottom pos-absolute col-12 text-right">
-                    <ul class="social-list list-inline text-right list--hover">
-                        <li>
-                            <a href="#">
-                                <i class="socicon socicon-google icon icon--xs"></i>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="#">
-                                <i class="socicon socicon-twitter icon icon--xs"></i>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="#">
-                                <i class="socicon socicon-facebook icon icon--xs"></i>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="#">
-                                <i class="socicon socicon-instagram icon icon--xs"></i>
-                            </a>
-                        </li>
-                    </ul>
-                </div>
-            </div>
+            <!--end bar-->
         </div>
         <div class="main-container">
             <section class="text-center space--md">
