--- a/blog.html
+++ b/blog.html
@@ -23,96 +23,86 @@
     </head>
     <body class=" ">
         <a id="start"></a>
-        <div class="nav-container ">
-            <nav class="bar bar-toggle bar--transparent bar--absolute bg--dark">
-                <div class="container">
-                    <div class="row align-items-center">
-                        <div class="col-6">
-                            <div class="bar__module">
+        <div class="nav-container">
+                <div class="bar bar--sm visible-xs">
+                    <div class="container">
+                        <div class="row">
+                            <div class="col-3 col-md-2">
                                 <a href="index.html">
                                     <img class="logo logo-dark" alt="logo" src="img/logo/logo_dark.png" />
                                     <img class="logo logo-light" alt="logo" src="img/logo/logo.png" />
                                 </a>
                             </div>
-                            <!--end module-->
-                        </div>
-                        <div class="col-6 d-flex justify-content-end">
-                            <div class="bar__module">
-                                <div class="modal-instance pull-right">
-                                    <a class="modal-trigger menu-toggle" href="#">
-                                        <i class="stack-interface stack-menu"></i>
-                                    </a>
-                                    <div class="modal-container menu-fullscreen">
-                                        <div class="modal-content" data-width="100%" data-height="100%">
-                                            <div class="pos-vertical-center pos-asbolute text-center">
-                                                <div class="heading-block">
-                                                    <img alt="Image" src="img/logo/logo.png" class="logo image--xs" />
-                                                    <p class="lead">
-                                                       Let join hand 
-                                                        <br class="hidden-xs hidden-sm" /> and make your dreams come true.
-                                                    </p>
-                                                </div>
-                                                <ul class="menu-vertical">
-                                                    <li class="h4">
-                                                        <a href="index.html">Home</a>
-                                                    <li class="h4">
-                                                        <a href="aboutus.html">About</a>
-                                                    </li>
-                                                    <li class="h4">
-                                                        <a href="magazine.html">Magazine</a>
-                                                    </li>
-                                                    <li class="h4">
-                                                        <a href="blog.html">Blog</a>
-                                                    </li>
-                                                    <li class="h4">
-                                                        <a href="contactus.html">Contact Us</a>
-                                                    </li>
-                                                </ul>
-                                            </div>
-                                            <!--end centered-->
-                                            <div class="pos-absolute pos-bottom text-center">
-                                                <ul class="social-list list-inline list--hover">
-                                                    <li>
-                                                        <a href="#">
-                                                            <i class="socicon socicon-google icon icon--xs"></i>
-                                                        </a>
-                                                    </li>
-                                                    <li>
-                                                        <a href="#">
-                                                            <i class="socicon socicon-twitter icon icon--xs"></i>
-                                                        </a>
-                                                    </li>
-                                                    <li>
-                                                        <a href="#">
-                                                            <i class="socicon socicon-facebook icon icon--xs"></i>
-                                                        </a>
-                                                    </li>
-                                                    <li>
-                                                        <a href="#">
-                                                            <i class="socicon socicon-instagram icon icon--xs"></i>
-                                                        </a>
-                                                    </li>
-                                                </ul>
-                                                <p class="type--fine-print type--fade">&copy; Copyright 2016 &mdash; Verso Africa</p>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                                <!--end of modal instance-->
+                            <div class="col-9 col-md-10 text-right">
+                                <a href="#" class="hamburger-toggle" data-toggle-class="#menu1;hidden-xs">
+                                    <i class="icon icon--sm stack-interface stack-menu"></i>
+                                </a>
                             </div>
-                            <!--end module-->
                         </div>
-                        <!--end columns-->
+                        <!--end of row-->
                     </div>
-                    <!--end of row-->
+                    <!--end of container-->
                 </div>
-                <!--end of container-->
-            </nav>
-        </div>
+                <!--end bar-->
+                <nav id="menu1" class="bar bar--sm bar-1 hidden-xs bar--absolute bar--transparent">
+                    <div class="container">
+                        <div class="row">
+                            <div class="col-lg-1 col-md-2 hidden-xs">
+                                <div class="bar__module">
+                                    <a href="index.html">
+                                        <img class="logo logo-dark" alt="logo" src="img/logo/logo_dark.png" />
+                                        <img class="logo logo-light" alt="logo" src="img/logo/logo.png" />
+                                    </a>
+                                </div>
+                                <!--end module-->
+                            </div>
+                            <div class="col-lg-11 col-md-12 text-right text-left-xs text-left-sm">
+                                <div class="bar__module">
+                                    <ul class="menu-horizontal text-left">
+                                        <li>
+                                            <a href="index.html"><span>Home</span></a>
+                                        </li>
+                                        <li>
+                                            <a href="aboutus.html"><span>About Us</span></a>
+                                        </li>
+                                        <li>
+                                            <a href="magazine.html"><span>Magazine</span></a>
+                                        </li>
+                                        <li>
+                                            <a href="blog.html"><span>Blog</span></a>
+                                        </li>
+                                        <li>
+                                            <a href="contactus.html"><span>Contact Us</span></a>
+                                        </li>
+                                        
+                                    </ul>
+                                </div>
+                                <!--end module-->
+                                <div class="bar__module">
+                                    <a class="btn btn--sm type--uppercase" href="contactus.html">
+                                        <span class="btn__text">
+                                            Hello!
+                                        </span>
+                                    </a>
+                                    <!-- <a class="btn btn--sm btn--primary type--uppercase" href="https://themeforest.net/item/stack-multipurpose-html-with-page-builder/19337626?ref=medium_rare">
+                                        <span class="btn__text">
+                                            Buy Now
+                                        </span>
+                                    </a> -->
+                                </div>
+                                <!--end module-->
+                            </div>
+                        </div>
+                        <!--end of row-->
+                    </div>
+                    <!--end of container-->
+                </nav>
+                <!--end bar-->
+            </div>
         <div class="main-container">
             <section class="height-50 imagebg">
                 <div class="background-image-holder">
-                    <img alt="background" src="img/logo/passion.png" />
+                    <img alt="background" src="img/read.png" />
                 </div>
             </section>
             <section class="space--md">
