--- a/aboutus.html
+++ b/aboutus.html
@@ -107,7 +107,7 @@
                         <div class="col-md-8 col-lg-6">
                             <h1>Hi, We're Verso</h1>
                             <p class="lead">
-                                An innovative collective of like-minded folks making useful and enduring Digital products
+                                A family of creative individuals turning anyone’s publishing dreams into reality 
                             </p>
                         </div>
                     </div>
@@ -119,9 +119,9 @@
                 <div class="container">
                     <div class="row justify-content-center">
                         <div class="col-md-10 col-lg-8">
-                            <h2>Built on passion and ingenuity</h2>
+                            <h2>About Us</h2>
                             <p class="lead">
-                                Medium Rare is an elite author known for offering high-quality, high-value products backed by timely and personable support. Recognised and awarded by Envato on multiple occasions for producing consistently outstanding products, it's no wonder over 20,000 customers enjoy using Medium Rare templates.
+                                We commenced our creativity in 2014 and from then we have been the leading publishers of online magazines in Ghana. Verso Africa offers a comprehensive approach with the speed and agility you need to propel your business forward. Our research-based strategy means we kick-start our work with you by immersing ourselves in your industry, your vision and your culture. We take care of your creative needs so that you can focus on running your business; we work together in order to help you grow.
                             </p>
                         </div>
                     </div>
@@ -134,9 +134,9 @@
                 <div class="container">
                     <div class="row justify-content-center">
                         <div class="col-md-10 col-lg-8">
-                            <h2>What drives us</h2>
+                            <h2>What we stand for</h2>
                             <p class="lead">
-                                Whether you’re building a welcome mat for your SaaS or a clean, corporate portfolio, Stack has your design needs covered.
+                                For the great changes happening day in day out it’s only right Africa with its numerous talents grow too. 
                             </p>
                         </div>
                     </div>
@@ -149,25 +149,25 @@
                     <div class="row">
                         <div class="col-md-4">
                             <div class="feature">
-                                <h4>Inclusion</h4>
-                                <p>
-                                    With rich modal and notification functionality and a robust suite of options, Stack makes building feature-heavy pages simple and enjoyable.
-                                </p>
-                            </div>
-                        </div>
-                        <div class="col-md-4">
-                            <div class="feature">
-                                <h4>Ingenuity</h4>
-                                <p>
-                                    Drastically reduce the time it takes to move from initial concept to production-ready with Stack and Variant Page Builder. Your clients will love you for it!
-                                </p>
-                            </div>
-                        </div>
-                        <div class="col-md-4">
-                            <div class="feature">
                                 <h4>Innovation</h4>
                                 <p>
-                                    Our customers love the comfort that comes with six-months free support. Our dedicated support forum makes interacting with us hassle-free and efficient.
+                                    Our customers love the idea of having a graphical document that contains everything that happens at a particular event 
+                                </p>
+                            </div>
+                        </div>
+                        <div class="col-md-4">
+                            <div class="feature">
+                                <h4>Impact</h4>
+                                <p>
+                                    Our customers get the best of articles that manipulates their thought pattern and makes them connect to greatness. 
+                                </p>
+                            </div>
+                        </div>
+                        <div class="col-md-4">
+                            <div class="feature">
+                                <h4>Community</h4>
+                                <p>
+                                    Join our community of writers, producing great content and imspiring stories to help build our future.
                                 </p>
                             </div>
                         </div>
@@ -195,48 +195,53 @@
                     <div class="row">
                         <div class="col-md-4">
                             <div class="feature feature-8">
+                                <img alt="Image" src="img/team/6.png" />
+                                <h5>Deborah Agyei-Minta </h5>
+                                <span>Editor-in-Cheif</span>
+                            </div>
+                        </div>
+                        <div class="col-md-4">
+                            <div class="feature feature-8">
                                 <img alt="Image" src="img/team/1.png" />
-                                <h5>Vera Duncan</h5>
-                                <span>Founder &amp; CEO</span>
+                                <h5>Curtis Okona Frimpong </h5>
+                                <span>Graphic designer</span>
+                            </div>
+                        </div>
+                        <div class="col-md-4">
+                            <div class="feature feature-8">
+                                <img alt="Image" src="img/team/7.png" />
+                                <h5>Vondee Selasie</h5>
+                                <span>Tech Lead</span>
+                            </div>
+                        </div>
+                        <div class="col-md-4">
+                            <div class="feature feature-8">
+                                <img alt="Image" src="img/team/2.png" />
+                                <h5>Adwoa Nyamekye Appiah</h5>
+                                <span>Content writer</span>
                             </div>
                         </div>
                         <div class="col-md-4">
                             <div class="feature feature-8">
                                 <img alt="Image" src="img/team/3.png" />
-                                <h5>Zach Smith</h5>
-                                <span>Co-Founder &amp; CTO</span>
-                            </div>
-                        </div>
-                        <div class="col-md-4">
-                            <div class="feature feature-8">
-                                <img alt="Image" src="img/team/5.png" />
-                                <h5>Bernice Lucas</h5>
-                                <span>Chief of Operations</span>
-                            </div>
-                        </div>
-                        <div class="col-md-2"></div>
-                        <div class="col-md-4">
-                            <div class="feature feature-8">
-                                <img alt="Image" src="img/team/2.png" />
-                                <h5>Cameron Nguyen</h5>
-                                <span>Lead Designer</span>
+                                <h5>Serene Boyson</h5>
+                                <span>Content writer</span>
                             </div>
                         </div>
                         <div class="col-md-4">
                             <div class="feature feature-8">
                                 <img alt="Image" src="img/team/4.png" />
-                                <h5>Josie Web</h5>
-                                <span>Head of Development</span>
+                                <h5>Mawuko Dodor</h5>
+                                <span>Content writer</span>
                             </div>
                         </div>
-                        <div class="col-md-2"></div>
-                        <!-- <div class="col-md-4">
+                        <div class="col-md-4">
                             <div class="feature feature-8">
-                                <img alt="Image" src="img/avatar-round-6.png" />
-                                <h5>Bryce Vaughn</h5>
-                                <span>Marketing Director</span>
+                                <img alt="Image" src="img/team/5.png" />
+                                <h5>David Ofosu</h5>
+                                <span>Cheif photographer</span>
                             </div>
-                        </div> -->
+                        </div>
                     </div>
                     <!--end of row-->
                 </div>
