--- a/admin/home.html
+++ b/admin/home.html
@@ -142,38 +142,38 @@
                         <div class="masonry__container row">
                             <div class="masonry__item col-md-6 col-12"></div>
                             <div class="masonry__item col-md-6 col-12" data-masonry-filter="Beach">
-                                <a href="img/maga/1.jpeg" data-lightbox="gallery">
-                                    <img alt="Image" src="img/maga/1.jpeg" />
+                                <a href="img/photography-6.jpg" data-lightbox="gallery">
+                                    <img alt="Image" src="img/photography-6.jpg" />
                                 </a>
                             </div>
                             <!--end masonry item-->
                             <div class="masonry__item col-md-6 col-12" data-masonry-filter="Beach">
-                                <a href="img/maga/2.jpeg" data-lightbox="gallery">
-                                    <img alt="Image" src="img/maga/2.jpeg" />
+                                <a href="img/photography-12.jpg" data-lightbox="gallery">
+                                    <img alt="Image" src="img/photography-12.jpg" />
                                 </a>
                             </div>
                             <!--end masonry item-->
                             <div class="masonry__item col-md-6 col-12" data-masonry-filter="Beach">
-                                <a href="img/maga/3.jpeg" data-lightbox="gallery">
-                                    <img alt="Image" src="img/maga/3.jpeg" />
+                                <a href="img/photography-9.jpg" data-lightbox="gallery">
+                                    <img alt="Image" src="img/photography-9.jpg" />
                                 </a>
                             </div>
                             <!--end masonry item-->
                             <div class="masonry__item col-md-6 col-12" data-masonry-filter="Beach">
-                                <a href="img/maga/4.jpeg" data-lightbox="gallery">
-                                    <img alt="Image" src="img/maga/4.jpeg" />
+                                <a href="img/photography-7.jpg" data-lightbox="gallery">
+                                    <img alt="Image" src="img/photography-7.jpg" />
                                 </a>
                             </div>
                             <!--end masonry item-->
                             <div class="masonry__item col-md-6 col-12" data-masonry-filter="Beach">
-                                <a href="img/maga/5.jpeg" data-lightbox="gallery">
-                                    <img alt="Image" src="img/maga/5.jpeg" />
+                                <a href="img/photography-10.jpg" data-lightbox="gallery">
+                                    <img alt="Image" src="img/photography-10.jpg" />
                                 </a>
                             </div>
                             <!--end masonry item-->
                             <div class="masonry__item col-md-6 col-12" data-masonry-filter="Beach">
-                                <a href="img/maga/6.jpeg" data-lightbox="gallery">
-                                    <img alt="Image" src="img/maga/6.jpeg" />
+                                <a href="img/photography-8.jpg" data-lightbox="gallery">
+                                    <img alt="Image" src="img/photography-8.jpg" />
                                 </a>
                             </div>
                             <!--end masonry item-->
