--- a/index.html
+++ b/index.html
@@ -225,8 +225,8 @@
                             <div class="col-md-7 col-6">
                                 <a href="#" class="block">
                                     <div class="feature feature-7 boxed text-center imagebg" data-overlay="2">
-                                        <div class="background-image-holder" style="background: url(&quot;img/tourism-2.jpg&quot;); opacity: 1;">
-                                            <img alt="background" src="img/tourism-2.jpg">
+                                        <div class="background-image-holder" style="background: url(&quot;img/mag/hm1.png&quot;); opacity: 1;">
+                                            <img alt="background" src="img/mag/hm1.png">
                                         </div>
                                         <h4 class="pos-vertical-center">Urban Exploration</h4>
                                     </div>
@@ -235,8 +235,8 @@
                             <div class="col-md-5 col-6">
                                 <a href="#" class="block">
                                     <div class="feature feature-7 boxed text-center imagebg" data-overlay="2">
-                                        <div class="background-image-holder" style="background: url(&quot;img/tourism-3.jpg&quot;); opacity: 1;">
-                                            <img alt="background" src="img/tourism-3.jpg">
+                                        <div class="background-image-holder" style="background: url(&quot;img/mag/hm2.png&quot;); opacity: 1;">
+                                            <img alt="background" src="img/mag/hm2.png">
                                         </div>
                                         <h4 class="pos-vertical-center">Coastal Cruising</h4>
                                     </div>
@@ -245,8 +245,8 @@
                             <div class="col-md-5 col-6">
                                 <a href="#" class="block">
                                     <div class="feature feature-7 boxed text-center imagebg" data-overlay="2">
-                                        <div class="background-image-holder" style="background: url(&quot;img/tourism-4.jpg&quot;); opacity: 1;">
-                                            <img alt="background" src="img/tourism-4.jpg">
+                                        <div class="background-image-holder" style="background: url(&quot;img/mag/hm3.png&quot;); opacity: 1;">
+                                            <img alt="background" src="img/mag/hm3.png">
                                         </div>
                                         <h4 class="pos-vertical-center">Luxe Living</h4>
                                     </div>
@@ -255,8 +255,8 @@
                             <div class="col-md-7 col-6">
                                 <a href="#" class="block">
                                     <div class="feature feature-7 boxed text-center imagebg" data-overlay="5">
-                                        <div class="background-image-holder" style="background: url(&quot;img/tourism-5.jpg&quot;); opacity: 1;">
-                                            <img alt="background" src="img/tourism-5.jpg">
+                                        <div class="background-image-holder" style="background: url(&quot;img/mag/hm4.png&quot;); opacity: 1;">
+                                            <img alt="background" src="img/mag/hm4.png">
                                         </div>
                                         <h4 class="pos-vertical-center">Intrepid Adventure</h4>
                                     </div>
@@ -352,8 +352,8 @@
                                                         <img alt="Image" src="img/blog-2.jpg">
                                                     </a>
                                                     <div class="feature__body boxed boxed--border">
-                                                        <span>May 25th 2016</span>
-                                                        <h5>A day in the life of a professional fitness blogger</h5>
+                                                        <span>May 25th 2019</span>
+                                                        <h5>VERSO’S top 9 lucurative Businesses </h5>
                                                         <a href="#">
                                                             Read More
                                                         </a>
@@ -367,8 +367,8 @@
                                                         <img alt="Image" src="img/blog-3.jpg">
                                                     </a>
                                                     <div class="feature__body boxed boxed--border">
-                                                        <span>May 25th 2016</span>
-                                                        <h5>Small businesses that expertly leverage their online followings</h5>
+                                                        <span>May 27th 2019</span>
+                                                        <h5>Start Now</h5>
                                                         <a href="#">
                                                             Read More
                                                         </a>
@@ -450,9 +450,9 @@
                 <div class="container">
                     <div class="row justify-content-center">
                         <div class="col-md-10 col-lg-8">
-                            <h2>Perfect for Businesses &amp; Developers</h2>
+                            <h2>Our values </h2>
                             <p class="lead">
-                                Whether you’re building a welcome mat for your SaaS or a clean, corporate portfolio, Stack has your design needs covered.
+                                Join our vision and what we stand for.
                             </p>
                         </div>
                     </div>
@@ -461,7 +461,7 @@
                 <!--end of container-->
             </section>
             <section class="bg--secondary imagebg image--light">
-                <div class="background-image-holder visible-lg">
+                <div class="background-image-holder visible-lg" style="height: 23.5em;">
                     <img alt="background" src="img/device-bg-1.jpg" />
                 </div>
                 <div class="container">
@@ -471,37 +471,35 @@
                                 <ul class="tabs">
                                     <li class="active">
                                         <div class="tab__title">
-                                            <span class="h5">Code Quality</span>
+                                            <span class="h5">Vision</span>
                                         </div>
                                         <div class="tab__content">
-                                            <p class="lead">
-                                                Stack follows the BEM naming convention that focusses on logical code readability that is reflected in both the HTML and CSS. Interactive elements such as accordions and tabs follow the same markup patterns making rapid development easier for developers and beginners alike.
+                                            <p class="lead" style="text-align: center;">
+                                                Verso aims to create an avenue where young people can be free to be innovative and bring change to Africa through their skills
                                             </p>
-                                            <p class="lead">
+                                            <!-- <p class="lead">
                                                 Add to this the thoughtfully presented documentation, featuring code highlighting, snippets, class customizer explanation and you've got yourself one powerful value package.
-                                            </p>
+                                            </p> -->
                                         </div>
                                     </li>
                                     <li>
                                         <div class="tab__title">
-                                            <span class="h5">Visual Design</span>
+                                            <span class="h5">Mission</span>
                                         </div>
                                         <div class="tab__content">
-                                            <p class="lead">
-                                                Stack offers a clean and contemporary look to suit a range of purposes from corporate, tech startup, marketing site to digital storefront. Elements have been designed to showcase content in a diverse yet consistent manner.
+                                            <p class="lead" style="text-align: center;">
+                                                To see an outpouring of greatness through technology and entrepreneurship in Africa by vibrant and visionary youth.
                                             </p>
-                                            <p class="lead">
-                                                Multiple font and colour scheme options mean that dramatically altering the look of your site is just clicks away &mdash; Customizing your site in the included Variant Page Builder makes experimenting with styles and content arrangements dead simple.
-                                            </p>
+                                           
                                         </div>
                                     </li>
                                     <li>
                                         <div class="tab__title">
-                                            <span class="h5">Stack Experience</span>
+                                            <span class="h5">Experience</span>
                                         </div>
                                         <div class="tab__content">
-                                            <p class="lead">
-                                                Medium Rare is an elite author known for offering high-quality, high-value products backed by timely and personable support. Recognised and awarded by Envato on multiple occasions for producing consistently outstanding products, there's no wonder over 20,000 customers enjoy using Medium Rare templates.
+                                            <p class="lead" style="text-align: center;">
+                                                We have 10 years experence in what we do with the industry's best as part of our team and community.
                                             </p>
                                         </div>
                                     </li>
@@ -543,7 +541,7 @@
                 </div>
                 <div class="container">
                     <div class="row justify-content-center">
-                        <h2>Join our 20,000+ member community</h2>
+                        <h2>Join our 10,000+ member community</h2>
                     </div>
                     <form class="row justify-content-center" action="http://mrare.us8.list-manage.com/subscribe/post?u=77142ece814d3cff52058a51f&amp;id=f300c9cce8" data-success="Thanks for signing up.  Please check your inbox for a confirmation email." data-error="Please provide your name and email address and agree to the terms.">
                         <div class="col-lg-3 col-md-4">
